chore(breaking): singular noun and snake_case
